ffix bug with overlapping top and left

--- a/style.css
+++ b/style.css
@@ -31,11 +31,13 @@
 .outer-wrapper {
   width: 100vh;
   height: 100vw;
-  transform: rotate(-90deg) translateX(-99.2vh);
+  transform: rotate(-90deg) translateX(-100vh);
   transform-origin: top left;
   overflow-y: scroll;
   overflow-x: hidden;
   position: absolute;
+  left: 0px;
+  top: 0px;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
